修复启动时模组加载的时机问题，优化模组日志